--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -101,13 +101,56 @@
   --color-warning-content: oklch(98% 0.022 95.277);
   --color-error: oklch(57% 0.245 27.325);
   --color-error-content: oklch(97% 0.013 17.38);
-}  
+}
 
+@keyframes float-vertical {
+  0%,
+  100% {
+    transform: translateY(-2px);
+  }
+  50% {
+    transform: translateY(2px);
+  }
+}
+
+@keyframes float-horizontal {
+  0%,
+  100% {
+    transform: translateX(-2px);
+  }
+  50% {
+    transform: translateX(2px);
+  }
+}
+
+@keyframes float-sway {
+  0%,
+  100% {
+    transform: rotate(1deg);
+  }
+  50% {
+    transform: rotate(-1deg);
+  }
+}
+
+.move-vertical {
+  animation: float-vertical 2s ease-in-out 0.5s infinite backwards;
+}
+
+.move-horizontal {
+  animation: float-horizontal 4s ease-in-out infinite;
+}
+
+.move-sway {
+  animation: float-sway 4s ease-in-out 1s infinite backwards;
+  transform-origin: top center;
+}
 
 .ghost-container {
-  position: relative;
-  width: 200px;
-  height: 200px;
+  position: absolute;
+  z-index: 40;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .ghost-assembly {
@@ -116,7 +159,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  will-change: transform; 
+  will-change: transform;
 }
 
 .ghost-assembly svg {
@@ -125,28 +168,30 @@
   left: 0;
   width: 100%;
   height: 100%;
-  pointer-events: none; 
+  pointer-events: none;
 }
 
 #front-hoodie {
-  z-index: 50;
+  z-index: 40;
 }
-#eyes {
-  z-index: 49; 
+#right-eye {
+  z-index: 39;
+}
+#left-eye {
+  z-index: 39;
 }
 #nose {
-  z-index: 49;
+  z-index: 39;
 }
 #skull {
-  z-index: 48;
+  z-index: 38;
 }
 #back-hoodie {
-  z-index: 47;
+  z-index: 37;
 }
 #front-cape {
-  z-index: 46;
+  z-index: 36;
 }
 #back-cape {
-  z-index: 45;
+  z-index: 35;
 }
-
