--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,6 +77,29 @@
   --color-error-content: oklch(97% 0.013 17.38);
 }
 
+html::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+html::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+html::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 10px;
+}
+
+html::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+html {
+  scrollbar-width: thin;
+  scrollbar-color: #888 transparent;
+}
+
 @keyframes float-vertical {
   0%,
   100% {
