--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,17 +4,18 @@
   --color-base-100: var(--theme-base-100);
   --color-base-200: var(--theme-base-200);
   --color-base-300: var(--theme-base-300);
-  --color-base-dark: var(--theme-base-dark);
   --color-base-content: var(--theme-base-content);
   --color-neutral: var(--theme-neutral);
   --color-neutral-content: var(--theme-neutral-content);
-
+  
   --color-primary: var(--theme-primary);
   --color-primary-content: var(--theme-primary-content);
   --color-secondary: var(--theme-secondary);
   --color-secondary-content: var(--theme-secondary-content);
   --color-spotlight: var(--theme-spotlight);
   --color-spotlight-content: var(--theme-spotlight-content);
+  --color-base-dark: var(--theme-base-dark);
+  --color-blackwhite: var(--theme-blackwhite-content);
 
   --color-accent: var(--theme-accent);
   --color-accent-content: var(--theme-accent-content);
@@ -32,15 +33,17 @@
   --color-base-100: oklch(92% 0.013 255.508);
   --color-base-200: oklch(86% 0.022 252.894);
   --color-base-300: oklch(70% 0.04 256.788);
-  --color-base-dark: oklch(13% 0.028 261.692);
   --color-base-content: oklch(20% 0.042 265.755);
-
+  
   --color-primary: oklch(0.3516 0.1331 267);
   --color-primary-content: oklch(82.63% 0.048 266.64);
   --color-secondary: oklch(0.898 0.1246 90.32);
   --color-secondary-content: oklch(0.2428 0.0418 62.09);
-  --color-spotlight: oklch(44% 0.03 256.802);
+
+  --color-spotlight: oklch(37% 0.013 285.805);
   --color-spotlight-content: oklch(0.943 0.0734 106.05);
+  --color-base-dark: oklch(13% 0.028 261.692);
+  --color-blackwhite: oklch(100% 0 0);
 
   --color-accent: oklch(0.8868 0.1098 204.04);
   --color-accent-content: oklch(0.2671 0.056 229.695);
@@ -61,9 +64,8 @@
   --color-base-100: oklch(37% 0.044 257.287);
   --color-base-200: oklch(27% 0.041 260.031);
   --color-base-300: oklch(20% 0.042 265.755);
-  --color-base-dark: oklch(13% 0.028 261.692);
   --color-base-content: oklch(96% 0.003 264.542);
-
+  
   --color-primary: oklch(0.4805 0.114 253.57);
   --color-primary-content: oklch(93.35% 0.021 215.26);
   --color-secondary: oklch(0.943 0.0734 106.05);
@@ -71,8 +73,9 @@
   
   --color-spotlight: oklch(0.943 0.0734 106.05);
   --color-spotlight-content: oklch(20% 0.042 265.755);
-
-
+  --color-base-dark: oklch(13% 0.028 261.692);
+  --color-blackwhite: oklch(0% 0 0);
+  
   --color-accent: oklch(0.8868 0.1098 204.04);
   --color-accent-content: oklch(0.2671 0.056 229.695);
   --color-neutral: oklch(44% 0.03 256.802);
