--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -11,10 +11,13 @@
   --color-secondary: var(--theme-secondary);
   --color-secondary-content: var(--theme-secondary-content);
 
-  --color-spotlight: var(--theme-spotlight);
-  --color-spotlight-content: var(--theme-spotlight-content);
   --color-base-dark: var(--theme-base-dark);
   --color-base-dark-content: var(--theme-base-dark-content);
+  --color-light-blue: var(--theme-light-blue);
+  --color-light-blue-content: var(--theme-light-blue-content);
+
+  --color-spotlight: var(--theme-spotlight);
+  --color-spotlight-content: var(--theme-spotlight-content);
   --color-neutral-variant: var(--theme-neutral-variant);
   --color-neutral-variant-content: var(--theme-neutral-variant-content);
   --color-blackwhite: var(--theme-blackwhite);
@@ -41,16 +44,19 @@
   --color-secondary: oklch(0.898 0.1246 90.32);
   --color-secondary-content: oklch(0.2428 0.0418 62.09);
 
-  --color-spotlight: oklch(37% 0.013 285.805);
-  --color-spotlight-content: oklch(0.943 0.0734 106.05);
   --color-base-dark: oklch(13% 0.028 261.692);
   --color-base-dark-content: oklch(0.9275 0.0248 257.65);
+  --color-light-blue: oklch(0.8868 0.1098 204.04);
+  --color-light-blue-content: oklch(0.2671 0.056 229.695);
+
+  --color-spotlight: oklch(37% 0.013 285.805);
+  --color-spotlight-content: oklch(0.943 0.0734 106.05);
   --color-neutral-variant: oklch(44% 0.017 285.786);
   --color-neutral-variant-content: oklch(0.9187 0.0135 286.13);
   --color-blackwhite: oklch(100% 0 0);
 
-  --color-accent: oklch(0.8868 0.1098 204.04);
-  --color-accent-content: oklch(0.2671 0.056 229.695);
+  --color-accent: oklch(0.3587 0.074 235.73);
+  --color-accent-content: oklch(0.9355 0.0373 196.53);
   --color-neutral: oklch(44% 0.03 256.802);
   --color-neutral-content: oklch(98% 0.002 247.839);
   --color-info: oklch(58% 0.158 241.966);
@@ -75,10 +81,13 @@
   --color-secondary: oklch(0.943 0.0734 106.05);
   --color-secondary-content: oklch(0.289 0.0483 85.17);
 
-  --color-spotlight: oklch(0.943 0.0734 106.05);
-  --color-spotlight-content: oklch(20% 0.042 265.755);
   --color-base-dark: oklch(13% 0.028 261.692);
   --color-base-dark-content: oklch(0.9275 0.0248 257.65);
+  --color-light-blue: oklch(0.8868 0.1098 204.04);
+  --color-light-blue-content: oklch(0.2671 0.056 229.695);
+
+  --color-spotlight: oklch(0.943 0.0734 106.05);
+  --color-spotlight-content: oklch(20% 0.042 265.755);
   --color-neutral-variant: oklch(37% 0.013 285.805);
   --color-neutral-variant-content: oklch(0.9187 0.0135 286.13);
   --color-blackwhite: oklch(0% 0 0);
