--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -33,75 +33,79 @@
   --color-error: var(--theme-error);
   --color-error-content: var(--theme-error-content);
 }
-:is([data-theme="light"], [data-theme="light"] *) {
-  --color-base-100: oklch(92% 0.013 255.508);
-  --color-base-200: oklch(86% 0.022 252.894);
-  --color-base-300: oklch(70% 0.04 256.788);
-  --color-base-content: oklch(20% 0.042 265.755);
 
-  --color-primary: oklch(0.4805 0.114 253.57);
-  --color-primary-content: oklch(93.35% 0.021 215.26);
-  --color-secondary: oklch(0.898 0.1246 90.32);
-  --color-secondary-content: oklch(0.2428 0.0418 62.09);
+:root, [data-theme="dark"] {
+  color-scheme: dark;
+  --theme-base-100: oklch(37% 0.044 257.287);
+  --theme-base-200: oklch(27% 0.041 260.031);
+  --theme-base-300: oklch(20% 0.042 265.755);
+  --theme-base-content: oklch(96% 0.003 264.542);
 
-  --color-base-dark: oklch(13% 0.028 261.692);
-  --color-base-dark-content: oklch(0.9275 0.0248 257.65);
-  --color-light-blue: oklch(0.8868 0.1098 204.04);
-  --color-light-blue-content: oklch(0.2671 0.056 229.695);
+  --theme-primary: oklch(0.3516 0.1331 267);
+  --theme-primary-content: oklch(89.63% 0.048 266.64);
+  --theme-secondary: oklch(0.943 0.0734 106.05);
+  --theme-secondary-content: oklch(0.289 0.0483 85.17);
 
-  --color-spotlight: oklch(37% 0.013 285.805);
-  --color-spotlight-content: oklch(0.943 0.0734 106.05);
-  --color-neutral-variant: oklch(44% 0.017 285.786);
-  --color-neutral-variant-content: oklch(0.9187 0.0135 286.13);
-  --color-blackwhite: oklch(100% 0 0);
+  --theme-base-dark: oklch(13% 0.028 261.692);
+  --theme-base-dark-content: oklch(0.9275 0.0248 257.65);
+  --theme-light-blue: oklch(0.8868 0.1098 204.04);
+  --theme-light-blue-content: oklch(0.2671 0.056 229.695);
 
-  --color-accent: oklch(0.3587 0.074 235.73);
-  --color-accent-content: oklch(0.9355 0.0373 196.53);
-  --color-neutral: oklch(44% 0.03 256.802);
-  --color-neutral-content: oklch(98% 0.002 247.839);
-  --color-info: oklch(58% 0.158 241.966);
-  --color-info-content: oklch(98% 0.019 200.873);
+  --theme-spotlight: oklch(0.943 0.0734 106.05);
+  --theme-spotlight-content: oklch(20% 0.042 265.755);
+  --theme-neutral-variant: oklch(37% 0.013 285.805);
+  --theme-neutral-variant-content: oklch(0.9187 0.0135 286.13);
+  --theme-blackwhite: oklch(0% 0 0);
 
-  --color-success: oklch(52% 0.154 150.069);
-  --color-success-content: oklch(98% 0.018 155.826);
-  --color-warning: oklch(55% 0.163 48.998);
-  --color-warning-content: oklch(98% 0.022 95.277);
-  --color-error: oklch(50% 0.213 27.518);
-  --color-error-content: oklch(97% 0.013 17.38);
+  --theme-accent: oklch(0.8868 0.1098 204.04);
+  --theme-accent-content: oklch(0.2671 0.056 229.695);
+  --theme-neutral: oklch(50% 0.03 256.802);
+  --theme-neutral-content: oklch(98% 0.002 247.839);
+  --theme-info: oklch(60% 0.126 221.723);
+  --theme-info-content: oklch(98% 0.019 200.873);
+  
+  --theme-success: oklch(62% 0.194 149.214);
+  --theme-success-content: oklch(98% 0.018 155.826);
+  --theme-warning: oklch(66% 0.179 58.318);
+  --theme-warning-content: oklch(98% 0.022 95.277);
+  --theme-error: oklch(57% 0.245 27.325);
+  --theme-error-content: oklch(97% 0.013 17.38);
 }
 
-:is([data-theme="dark"], [data-theme="dark"] *) {
-  --color-base-100: oklch(37% 0.044 257.287);
-  --color-base-200: oklch(27% 0.041 260.031);
-  --color-base-300: oklch(20% 0.042 265.755);
-  --color-base-content: oklch(96% 0.003 264.542);
+[data-theme="light"] {
+  color-scheme: light;
+  --theme-base-100: oklch(92% 0.013 255.508);
+  --theme-base-200: oklch(86% 0.022 252.894);
+  --theme-base-300: oklch(70% 0.04 256.788);
+  --theme-base-content: oklch(20% 0.042 265.755);
 
-  --color-primary: oklch(0.3516 0.1331 267);
-  --color-primary-content: oklch(89.63% 0.048 266.64);
-  --color-secondary: oklch(0.943 0.0734 106.05);
-  --color-secondary-content: oklch(0.289 0.0483 85.17);
+  --theme-primary: oklch(0.4805 0.114 253.57);
+  --theme-primary-content: oklch(93.35% 0.021 215.26);
+  --theme-secondary: oklch(0.898 0.1246 90.32);
+  --theme-secondary-content: oklch(0.2428 0.0418 62.09);
 
-  --color-base-dark: oklch(13% 0.028 261.692);
-  --color-base-dark-content: oklch(0.9275 0.0248 257.65);
-  --color-light-blue: oklch(0.8868 0.1098 204.04);
-  --color-light-blue-content: oklch(0.2671 0.056 229.695);
+  --theme-base-dark: oklch(13% 0.028 261.692);
+  --theme-base-dark-content: oklch(0.9275 0.0248 257.65);
+  --theme-light-blue: oklch(0.8868 0.1098 204.04);
+  --theme-light-blue-content: oklch(0.2671 0.056 229.695);
 
-  --color-spotlight: oklch(0.943 0.0734 106.05);
-  --color-spotlight-content: oklch(20% 0.042 265.755);
-  --color-neutral-variant: oklch(37% 0.013 285.805);
-  --color-neutral-variant-content: oklch(0.9187 0.0135 286.13);
-  --color-blackwhite: oklch(0% 0 0);
+  --theme-spotlight: oklch(37% 0.013 285.805);
+  --theme-spotlight-content: oklch(0.943 0.0734 106.05);
+  --theme-neutral-variant: oklch(44% 0.017 285.786);
+  --theme-neutral-variant-content: oklch(0.9187 0.0135 286.13);
+  --theme-blackwhite: oklch(100% 0 0);
 
-  --color-accent: oklch(0.8868 0.1098 204.04);
-  --color-accent-content: oklch(0.2671 0.056 229.695);
-  --color-neutral: oklch(50% 0.03 256.802);
-  --color-neutral-content: oklch(98% 0.002 247.839);
-  --color-info: oklch(60% 0.126 221.723);
-  --color-info-content: oklch(98% 0.019 200.873);
-  --color-success: oklch(62% 0.194 149.214);
-  --color-success-content: oklch(98% 0.018 155.826);
-  --color-warning: oklch(66% 0.179 58.318);
-  --color-warning-content: oklch(98% 0.022 95.277);
-  --color-error: oklch(57% 0.245 27.325);
-  --color-error-content: oklch(97% 0.013 17.38);
+  --theme-accent: oklch(0.3587 0.074 235.73);
+  --theme-accent-content: oklch(0.9355 0.0373 196.53);
+  --theme-neutral: oklch(44% 0.03 256.802);
+  --theme-neutral-content: oklch(98% 0.002 247.839);
+  --theme-info: oklch(58% 0.158 241.966);
+  --theme-info-content: oklch(98% 0.019 200.873);
+
+  --theme-success: oklch(52% 0.154 150.069);
+  --theme-success-content: oklch(98% 0.018 155.826);
+  --theme-warning: oklch(55% 0.163 48.998);
+  --theme-warning-content: oklch(98% 0.022 95.277);
+  --theme-error: oklch(50% 0.213 27.518);
+  --theme-error-content: oklch(97% 0.013 17.38);
 }
