fix(Layout): Fixing unwanted color problem caused by previous commit

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,8 @@
 @import "tailwindcss";
 
+@import "./theme.css";
+@import "./animations.css";
+
 html::-webkit-scrollbar {
   width: 8px;
   height: 8px;
